# primal

./: CMakeLists.txt  README.md  write.prim
cmake/: CodeCoverage.cmake
compiler/: CMakeLists.txt  asm_compiler.cpp  asm_compiler.h  ast.cpp  ast.h  compiler.cpp  compiler.h  function.cpp  function.h  function_call.cpp  function_call.h  generate.cpp  generate.h  keyword_def.h  keywords.h  kw_asm.cpp  kw_asm.h  kw_if.cpp  kw_if.h  kw_let.cpp  kw_let.h  label.cpp  label.h  lexer.cpp  lexer.h  main.cpp  numeric_constant.h  op_priv.h  operators.h  options.cpp  options.h  parameter.h  parser.cpp  parser.h  sequence.cpp  sequence.h  source.cpp  source.h  stringtable.cpp  stringtable.h  (+8 more)
compiler/keywords/: kw_asm.cpp  kw_asm.h  kw_end.cpp  kw_end.h  kw_endf.cpp  kw_endf.h  kw_endif.cpp  kw_endif.h  kw_for.cpp  kw_for.h  kw_fun.cpp  kw_fun.h  kw_goto.cpp  kw_goto.h  kw_if.cpp  kw_if.h  kw_let.cpp  kw_let.h  kw_next.cpp  kw_next.h  kw_return.cpp  kw_return.h  kw_var.cpp  kw_var.h  kw_while.cpp  kw_while.h
debugger/: CMakeLists.txt  main  main.cpp
hal/: CMakeLists.txt  byte_order.c  byte_order.h  exceptions.h  hal.h  numeric_decl.h  opcode.h  registers.cpp  registers.h  type_destination.cpp  type_destination_decl.h  types.h
interface/: CMakeLists.txt
interface/include/: interface.h
opcodes/: CMakeLists.txt  opcode_compile.template  opcode_decl.template  opcode_impl.template
opcodes/compile/: compile_ADD.cpp  compile_AND.cpp  compile_COPY.cpp  compile_DIV.cpp  compile_DJMP.cpp  compile_DJNT.cpp  compile_DJT.cpp  compile_EQ.cpp  compile_GT.cpp  compile_GTE.cpp  compile_JMP.cpp  compile_JNT.cpp  compile_JT.cpp  compile_LT.cpp  compile_LTE.cpp  compile_MOD.cpp  compile_MOV.cpp  compile_MUL.cpp  compile_NEQ.cpp  compile_OR.cpp  compile_POP.cpp  compile_PUSH.cpp  compile_SUB.cpp
opcodes/impl/: impl_ADD.cpp  impl_AND.cpp  impl_CALL.cpp  impl_COPY.cpp  impl_DIV.cpp  impl_DJMP.cpp  impl_DJNT.cpp  impl_DJT.cpp  impl_EQ.cpp  impl_GT.cpp  impl_GTE.cpp  impl_INC.cpp  impl_INTR.cpp  impl_JMP.cpp  impl_JNT.cpp  impl_JT.cpp  impl_LT.cpp  impl_LTE.cpp  impl_MOD.cpp  impl_MOV.cpp  impl_MUL.cpp  impl_NEQ.cpp  impl_NOT.cpp  impl_OR.cpp  impl_POP.cpp  impl_PUSH.cpp  impl_RET.cpp  impl_SUB.cpp  impl_XOR.cpp
primdis/: CMakeLists.txt  main.cpp
static_vm/: CMakeLists.txt  main.cpp  primal.h
tests/: CMakeLists.txt  parser_test.cpp  tests.cpp
util/: CMakeLists.txt  util.cpp  util.h
vm/: CMakeLists.txt  loaded_function.cpp  loaded_function.h  main.cpp  vm.cpp  vm.h  vm_impl.cpp  vm_impl.h
vm/intr/: intr_1.cpp  intr_2.cpp
